# death-room

./: .gitignore  README.md  package.json
assets/: Battle.scene  Loading.scene  Start.scene
assets/Base/: DirectionSubStateMachine.ts  EnemyManager.ts  EntityManager.ts  Singleton.ts  State.ts  StateMachine.ts  SubStateMachine.ts
assets/Enums/: index.ts
assets/Levels/: index.ts  level1.ts  level10.ts  level11.ts  level12.ts  level13.ts  level14.ts  level15.ts  level16.ts  level17.ts  level18.ts  level19.ts  level2.ts  level20.ts  level21.ts  level3.ts  level4.ts  level5.ts  level6.ts  level7.ts  level8.ts  level9.ts
assets/Runtime/: DataManager.ts  EventManager.ts  FaderManager.ts  ResourceManager.ts
assets/Scripts/Ad/: AdManager.ts
assets/Scripts/Burst/: BurstManager.ts  BurstStateMachine.ts
assets/Scripts/Door/: DeathSubStateMachine.ts  DoorManager.ts  DoorStateMachine.ts  IdleSubStateMachine.ts
assets/Scripts/IronSkeleton/: DeathSubStateMachine.ts  IdleSubStateMachine.ts  IronSkeletonStateMachine.ts
assets/Scripts/Player/: AirDeathSubStateMachine.ts  AttackSubStateMachine.ts  BlockBackSubStateMachine.ts  PlayerManager.ts  (+10 more)
assets/Utils/: index.ts
docs/: google-admob-android-integration.md
extensions/Google AdMob/: package-lock.json  package.json
native/engine/android/: CMakeLists.txt
native/engine/android/app/: AndroidManifest.xml  build.gradle
native/engine/android/app/src/com/cocos/game/: AppActivity.java
native/engine/android/instantapp/: AndroidManifest.xml
native/engine/android/instantapp/src/com/cocos/game/: InstantActivity.java
(+27 files in other folders)
